--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "burner-connector": "^0.0.17",
     "ethers": "^6.15.0",
     "iron-session": "^8.0.4",
+    "jsonwebtoken": "^9.0.2",
+    "mongodb": "^6.18.0",
     "next": "15.4.2",
     "react": "19.1.0",
     "react-dom": "19.1.0",
@@ -27,10 +29,12 @@
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
+    "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "tailwindcss": "^4",
+    "ts-node": "^10.9.2",
     "typescript": "^5"
   }
 }
