--- a/package.json
+++ b/package.json
@@ -15,9 +15,11 @@
     "@wagmi/connectors": "^5.9.0",
     "@wagmi/core": "^2.18.0",
     "burner-connector": "^0.0.17",
+    "dotenv": "^17.2.1",
     "ethers": "^6.15.0",
     "iron-session": "^8.0.4",
     "jsonwebtoken": "^9.0.2",
+    "lucide-react": "^0.536.0",
     "mongodb": "^6.18.0",
     "next": "15.4.2",
     "react": "19.1.0",
